# color-shell

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  config.cmake
cmake/: children-util.cmake  copy-target.cmake  list-util.cmake  msvc-options.cmake
commands/: CMakeLists.txt  README.md
commands/clear/: CMakeLists.txt
commands/clear/src/: main.c
commands/cmds/: CMakeLists.txt
commands/cmds/clear/: CMakeLists.txt  README.md
commands/cmds/mkdir/: CMakeLists.txt  README.md
commands/cmds/mkdir/src/: main.cpp
commands/cmds/pwd/: CMakeLists.txt  README.md
commands/cmds/pwd/src/: main.c  main.cpp
commands/mkdir/: CMakeLists.txt
commands/mkdir/src/: main.cpp
commands/pwd/: CMakeLists.txt
commands/rm/: CMakeLists.txt  README.md
commands/rm/src/: main.cpp
csh/: CMakeLists.txt  README.md
csh-lib/: CMakeLists.txt  README.md
csh-lib/src/: Color.cpp  Console.cpp  File.cpp  FileStream.cpp  csh-fmt.cpp  util.cpp
csh-lib/src/str/: char-util.cpp  string-util.cpp  wstring-util.cpp
csh-lib/test/: CMakeLists.txt
csh-lib/test/test-char-util/: test.cpp
csh-lib/test/test-string-util/: test.cpp
csh-lib/test/test-wstring-util/: test.cpp
csh/config/: config.yaml
csh/include/: CShConfig.h  CmdHistory.h  CmdList.h  color-shell.h  inner-cmd.h
csh/include/part/: IconPartConfig.h  Part.h  PartConfig.h  Parts.h  PathPart.h  PluginPart.h  UserPart.h
csh/src/: CShConfig.cpp  CmdHistory.cpp  CmdList.cpp  color-shell.cpp  main.cpp
csh/src/inner-cmd/: cd.cpp  history.cpp  updateIndexes.cpp
csh/src/part/: IconPartConfig.cpp  Part.cpp  PartConfig.cpp  Parts.cpp  PathPart.cpp  PluginPart.cpp  UserPart.cpp
extras/: CMakeLists.txt  README.md
extras/git/: CMakeLists.txt  README.md
extras/git/src/: main.cpp
extras/node/: CMakeLists.txt  README.md
extras/node/src/: main.cpp
include/: Color.h  Console.h  File.h  FileStream.h  csh-fmt.h  csh-plugin.h  inner-cmd.h  key-scan-code.h  predef.h  util.h
include/str/: char-util.h  string-util.h  wstring-util.h
include/test/: test.h
